@@ -220,9 +220,9 @@
 		<lang>C</lang>
 		<a href="http://raster.infos.cz/atari/rmt/rmt.htm">Raster Music Tracker</a>
 	</port>
-	<port name="ASAP2WAV (JScript)">
+	<port name="ASAP2WAV (JavaScript)">
 		<bin></bin>
-		<platform>Windows</platform>
+		<platform>desktop operating systems</platform>
 		<interface>command line</interface>
 		<since>2.0.0</since>
 		<status>experimental</status>
@@ -233,7 +233,7 @@
 		<convert-sap>no</convert-sap>
 		<config-time>yes</config-time>
 		<mute-pokey>yes</mute-pokey>
-		<lang>JScript</lang>
+		<lang>JavaScript</lang>
 	</port>
 	<port name="ASAP2WAV (browser JavaScript)">
 		<bin></bin>
