@@ -39,7 +39,7 @@ ASAP includes the following programs:
 - Java applet - for web pages {asapjava=}{asapwww?(see link:applet.html[online demo])}
 - Java midlet - for mobile devices {asapjava=}
 - C# version of ASAP2WAV
-- experimental JScript version of ASAP2WAV running in Windows Script Host {asapjavascript=}
+- experimental JavaScript version of ASAP2WAV running in Windows Script Host and https://developer.mozilla.org/en/Rhino_Shell[Rhino Shell] {asapjavascript=}
 - experimental JavaScript version of ASAP2WAV running in Firefox {asapjavascript=}
 - Flash player - for web pages {asapflash=}{asapwww?(see link:flash.html[online demo])}
 - asapplay - simple command-line player in C#
